# python-colors

./: README.md  setup.cfg  tox.ini
colors/: __init__.py  __main__.py
