[metadata]
name = python-colors
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Color text.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-colors
project_urls =
    Documentation = https://github.com/Reyalsorik/python-colors/README.md
    Source Code = https://github.com/Reyalsorik/python-colors

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = colors

[options]
include_package_data = true
